# K.A.S.L.A.N.A.-Protocol

./: .env.example  .gitattributes  .gitignore  AI_HANDOFF.md  AI_TASK_TEMPLATE.md  FEATURES_TESTING.md  README.md  environment.yml  pyproject.toml
config/: config.example.yaml
config/prompts/: kiana.yaml
docs/: 00_PROJECT_STATUS.md  01_ARCHITECTURE.md  02_HARDWARE_PURCHASING_AND_SETUP.md  03_WECHAT_AUTOMATION.md  04_AUDIO_VAD_AND_ASR.md  05_TTS_GPT_SOVITS.md  06_LLM_OPENAI_COMPATIBLE.md  07_ORCHESTRATION_AND_COLLABORATION.md  08_TESTING_STANDARDS.md  09_ROADMAP.md  10_DEVELOPMENT_LOG.md  11_OFFLINE_RAG_PRECACHE.md  12_OWNER_HARDWARE_PREP_MANUAL.md  13_AI_TASK_HARDWARE_DIAGNOSTICS.md  README.md
scripts/: check_devices.py  check_gpu.py  check_tts_server.py  list_audio_devices.py  run_morning_call.py  run_nightly_preprocess.py  setup_kaslana_conda_env.ps1  start_gsvi_tts_server.ps1  start_tts_control_panel.ps1  stop_gsvi_tts_server.ps1  stop_tts_control_panel.ps1  try_gpt_sovits_tts.py  tts_control_panel.py
src/kaslana/: __init__.py  main.py
src/kaslana/adapters/: __init__.py
src/kaslana/config/: __init__.py  loader.py  schema.py
src/kaslana/core/: __init__.py  events.py  offline_preprocessor.py  orchestrator.py  prompt_manager.py  scheduler.py  states.py  text_sanitize.py
tests/unit/: test_config_loader.py  test_dialogue_cache.py  test_gpt_sovits_tts.py  test_intent_router.py  test_llm_generate.py  test_orchestrator.py  test_ports_contract.py  test_prompt_manager.py  test_states.py  test_text_sanitize.py  test_tongyi_chat.py  test_tts_control_panel.py
(+40 files in other folders)
