[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaslana-protocol"
version = "0.1.0"
description = "Kinetic Audio Stream and Local Automated Network Assistant."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "K.A.S.L.A.N.A. Protocol Maintainers" }
]
dependencies = [
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5"
]

[project.scripts]
kaslana = "kaslana.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
